[tool.poetry]
name = "effectivemoile2"
version = "0.1.0"
description = ""
authors = ["Serg Kruglov <kruser@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
